- PageFunctions: added 'PageVarGet' and 'PageVarSet' hooks
- Added 'RegexTools' extension
- Added 'RegexNamespaceContext' extension
- Integrated 'MakeSysop' extension
- Integrated 'DeSysop' extension
===============================
REL1_10_9: (released ...) 
- Added 'MiscParserFunctions' extension
- Added 'ImageLink' extension
- Added 'PageAfterAndBefore' extension
- Added 'Magic Words' document for tracking all Magic Words, Tags and Parser Functions supported
- Added 'NS_FILESYSTEM' to 'off-limits' for RegexNamespaceContext functionality.
TODO!!! FileManager: Corrected issue with 'auto-summary' fix (usage of wrong bitwise operator)
- Geshi: added 'js' & 'css' tags for Javascript & CSS contents
- Added parser function 'gettagsection' to MiscParserFunctions extension
- Added 'RawPageTools' extension
- Fixed 'RegexNamespaceContext' for it to be more friendly with other extensions (e.g. AddScriptCss)
- Fixed 'ExtensionClass' for increased integration around 'ParserAfterTidy' hook
- Enhanced 'StubManager' to cover all required stubbing cases (tags, magic words etc.)
- Moved 'addtohead' tag functionality from SecureHTML to AddScriptCss
- AddScriptCss: enhanced to be 'stub'-enabled
- MiscParserFunctions: enhanced to be 'stub'-enabled
- ForeachFunction: enhanced to be 'stub'-enabled
- NamespaceFunctions: removed dependency on ExtensionClass, now is 'stub'-enabled
- RegexTools: removed dependency on ExtensionClass, now is 'stub'-enabled
- PageFunctions: removed dependency on ExtensionClass, now is 'stub'-enabled
- ParserTools: removed dependency on ExtensionClass, now is 'stub'-enabled
- DocProc: removed dependency on ExtensionClass, now is 'stub'-enabled
- ParserPhase2: removed dependency on ExtensionClass, now is 'stub'-enabled
- ParserPhase2: added 'EndParserPhase2' hook
- ParserPhase2: added pattern ((magic word...)) to match more closely stock MediaWiki
- ParserPhase2: added 'varcapset' parser function
- Added 'ScriptingTools' extension
- 